# OpenGL_Playground

./: .gitignore  CMakeLists.txt
res/shaders/: Basic.shader
src/: indexBuffer.cpp  indexBuffer.h  main.cpp  renderer.cpp  renderer.h  vertexBuffer.cpp  vertexBuffer.h
